2021-09-27 Danilo Chang

	* Implement command: initUndistortRectifyMap, projectPoints
	* Implement command: getOptimalNewCameraMatrix, undistort
	* Implement command: calibrateCamera
	* Implement command: createHanningWindow, phaseCorrelate
	* Implement command: setRNGSeed, randShuffle
	* Implement command: warpPolar

2021-09-26 Danilo Chang

	* Implement command: fillPoly, CLAHE, EMD, SVDecomp, SVBackSubst

2021-09-25 Danilo Chang

	* Apply Christian's patch (POC thread support)

2021-09-24 Danilo Chang

	* Implement command: minMaxIdx
	* Implement command: RTrees, ANN_MLP
	* Apply Christian's patch

2021-09-23 Danilo Chang

	* Implement command: DTrees, Boost

2021-09-22 Danilo Chang

	* Implement command: fitLine (for 2D point set)
	* Implement command: LogisticRegression, SVMSGD
	* Add pop_back and push_back method to MATRIX function

2021-09-21 Danilo Chang

	* Bump version to v0.9

2021-09-20 Danilo Chang

	* Apply Christian's patch (FileStorage interface)
	* Implement command: findChessboardCorners, drawChessboardCorners
	* Implement command: getGaussianKernel, sepFilter2D
	* Implement command: compareHist

2021-09-19 Danilo Chang

	* Re-design moments command
	* Implement command: determinant
	* Implement command: eigen, calcCovarMatrix, Mahalanobis
	* Update PCA command

2021-09-18 Danilo Chang

	* Improve contourArea command
	* Implement command: PCA
	* Implement command: integral
	* Implement command: connectedComponentsWithStats
	* Implement command: transform, solve

2021-09-17 Danilo Chang

	* Implement command: kmeans
	* Implement command: KNearest, NormalBayesClassifier

2021-09-16 Danilo Chang

	* Improve HOGDescriptor command
	* Add new file for SVM command

2021-09-15 Danilo Chang

	* Improve HOGDescriptor command
	* Implement command: rotate

2021-09-14 Danilo Chang

	* Apply Christian's patch for v0.8
	* Bump version to v0.8

2021-09-13 Danilo Chang

	* Re-design randu command for more than 1 channel case
	* Implement command: randn