@@ -1,3 +1,7 @@
+2021-09-28 Danilo Chang
+
+	* Implement command: solvePnP
+
 2021-09-27 Danilo Chang
 
 	* Implement command: initUndistortRectifyMap, projectPoints
